[package]
name = "txrx"
version = "0.1.1"
edition = "2021"

[dependencies]
anyhow = "1.0"
bytes = "1.1"
base64 = "0.13"
getrandom = "0.2"

clap = { version = "3.0", features = ["std", "derive"], default-features = false }

[target.'cfg(target_os = "windows")'.dependencies]
ifaces = { git = "https://github.com/zkonge/rust-ifaces.git" }

[target.'cfg(not(target_os = "windows"))'.dependencies]
interfaces = "0.0.8"


[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
